<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="house"
            type="com.callisto.tasador.domain.RealEstate" />

        <variable
            name="propertyCallback"
            type="com.callisto.tasador.ui.PropertyListItemClick" />

        <variable
            name="clickListener"
            type="com.callisto.tasador.adapters.OnEstateClickedListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_rectangle"
        android:onClick="@{() -> clickListener.onClick(house)}"
        android:padding="8dp">

        <TextView
            android:id="@+id/lblEstateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_id"
            app:layout_constraintStart_toStartOf="@+id/guidelineHouseLabels"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEstateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:estateId="@{house}"
            app:layout_constraintStart_toEndOf="@id/lblEstateId"
            app:layout_constraintStart_toStartOf="@+id/txtEstateAddress"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3" />

        <TextView
            android:id="@+id/lblEstateAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"
            app:layout_constraintStart_toStartOf="@+id/guidelineHouseLabels"
            app:layout_constraintTop_toBottomOf="@id/lblEstateId" />
        <!--        app:layout_constraintTop_toTopOf="parent"-->

        <TextView
            android:id="@+id/txtEstateAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:estateAddress="@{house}"
            app:layout_constraintStart_toEndOf="@id/lblEstateAddress"
            app:layout_constraintStart_toStartOf="@+id/txtEstateFinalPrice"
            app:layout_constraintTop_toBottomOf="@id/txtEstateId"
            tools:text="Some blah blah address" />
        <!--        app:layout_constraintTop_toTopOf="parent"-->

        <TextView
            android:id="@+id/lblEstateFinalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_price_final"
            app:layout_constraintStart_toStartOf="@+id/guidelineHouseLabels"
            app:layout_constraintTop_toBottomOf="@id/lblEstateAddress" />

        <TextView
            android:id="@+id/txtEstateFinalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:estateFinalPrice="@{house}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lblEstateFinalPrice"
            app:layout_constraintTop_toBottomOf="@id/txtEstateAddress"
            tools:text="A truckzillion cents" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHouseLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>